Change fqName get