@@ -36,7 +36,6 @@ dependencies {
 }
 
 def args = [
-        '--add-exports', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
         '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
 ]
